objects/External_Resources__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>External Resources</relationshipLabel>
        <relationshipName>External_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>External Resources</relationshipLabel>
        <relationshipName>External_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Url</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Resource</label>
    <nameField>
        <label>External Resources Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Resources</pluralLabel>
    <recordTypes>
        <fullName>Section</fullName>
        <active>true</active>
        <label>Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>